--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,11 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: bicineta_development
+  user: root
+  password:
+  encoding: UTF8
   pool: 5
   timeout: 5000
 
@@ -19,7 +22,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: bicineta_production
+  user: root
+  password: 
+  encoding: UTF8  
   pool: 5
-  timeout: 5000
